manifests/open-telemetry-collector-helm.yaml
# https://github.com/open-telemetry/opentelemetry-helm-charts/blob/main/charts/opentelemetry-collector/README.md
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opentelemetry-collector
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"          
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opentelemetry-collector
            port:
              number: 4320
